# optex

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  vercel.json
dashboard/: app.py
dashboard/assets/: custom.css
dashboard/components/: __init__.py  cards.py  charts.py  navbar.py
dashboard/pages/: __init__.py  agent_comparison.py  home.py  impact_curves.py  live_trading.py  regime_analysis.py  simulator.py
scripts/: download_data.py  generate_sample_data.py  pretrain_agents.py
src/backtesting/: engine.py  metrics.py
src/environment/: __init__.py  lob_env.py  reward_shaping.py
src/live/: __init__.py  binance_ws.py
src/models/: __init__.py  almgren_chriss.py  impact_models.py  kyle_lambda.py
src/training/: __init__.py  hpo.py  train_agents.py
tests/: test_backtest.py  test_env.py  test_features.py
