[project]
name = "optex"
version = "0.1.0"
description = "OPTEX – Quantitative Optimal Execution Platform"
requires-python = ">=3.11"

# Vercel reads [project.scripts] to locate the Flask/WSGI entrypoint.
# The key must be named "app" and point to the Flask server object.
[project.scripts]
app = "dashboard.app:server"
